syntax = "proto2";
option optimize_for = SPEED;
option cc_generic_services = false;

import "google/protobuf/any.proto";

package NickSV.Chat;



message ProtoClientInfo
{
    optional uint32 user_id = 1;
    optional uint32 lib_version = 2;
    optional uint32 state = 3 [default = 0];
    optional google.protobuf.Any additional_data = 4;
}